--- a/style.css
+++ b/style.css
@@ -2,15 +2,18 @@
 	margin: 0;
 	padding: 0;
 }
-body {    
+body {
     background: url('bg-12col.png') center repeat-y;
+	font-family: 'Nunito Sans', sans-serif;
+
+
 }
 
 header {
 	width: 940px;
 	margin: 0 auto;
 	padding: 0 20px;
-	
+
 	height: 300px;
 }
 
@@ -20,13 +23,15 @@ header div {
 
 #logo {
 	float: left;
-	margin-top: 20px;
+	margin-top: 50px;
 	margin-right: 10px;
+	width: 140px;
 }
 
 #search-button {
 	float: right;
-	margin-top: 187px;
+	width: 30px;
+	margin-top: 198px;
 }
 
 #content {
@@ -35,7 +40,7 @@ header div {
 	padding: 0 20px;
 	border-bottom: 2px dotted black;
 
-	
+
 }
 
 .slider {
@@ -58,8 +63,8 @@ header div {
 	width: 940px;
 	margin: 0 auto;
 	padding: 0 20px;
-	
-  
+
+
 }
 
 #footer p {
@@ -82,6 +87,7 @@ header div {
 	margin-right: 20px;
 	width: 300px;
 	margin-top: 15px;
+	text-align: center;
 
 	}
 
@@ -105,17 +111,23 @@ header div {
 #nav-left:after {
     content: '';
     display: inline-block;
-    width: 100%;
+
+	margin-left: 400px;
 }
 
 #nav-left {
   /*float: right;*/
   text-align: justify;
-    min-width: 600px;
-  
-  overflow: hidden; /* prevents the great collapse */
-padding: 10px 0;
-margin-top: 187px;
+  max-width: 100%;
+  overflow: hidden;/* prevents the great collapse */
+  padding: 10px 0;
+  margin-left: 50px;
+  margin-right: 135px;
+  position: absolute;
+  margin-top: 195px;
+
+
+
 /* overwrites existing margins */
 }
 
@@ -125,7 +137,7 @@ margin-top: 187px;
 ul {
     margin: 0;
     list-style: none;
-    display: inline-block;   
+    display: inline-block;
 }
 
 li {
@@ -136,9 +148,9 @@ li {
 /*#logo {
   position: absolute;
   left: 50%;
-  margin: -48px 0px 0px -108px; 
+  margin: -48px 0px 0px -108px;
   -top: 90px;
-} 
+}
 */
 .left-content {
     float: left;
@@ -164,7 +176,7 @@ li {
 
 
 .partners{
-    max-width: 200px;   
+    max-width: 200px;
 }
 
 .icon{
@@ -172,10 +184,10 @@ li {
 }
 
 .footertop{
-  
+
     text-align: center;
     line-height: 800%;
-    
+
 }
 
 .footerbottom{
