--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 body {
     background: url('bg-12col.png') center repeat-y;
 	font-family: 'Nunito Sans', sans-serif;
+  width: 100%;
 }
 
 header {
@@ -50,8 +51,8 @@ p{
 
 #search-button {
 	float: right;
-	width: 30px;
-	margin-top: 198px;
+	
+	margin-top: 187px;
 }
 
 #content {
@@ -103,8 +104,10 @@ p{
 .square {
 	float: left;
 	display:inline;
-	margin-right: 20px;
+	
 	width: 300px;
+  margin: 80px 0;
+  margin-right: 20px;
 	margin-top: 15px;
 	text-align: center;
 
@@ -113,6 +116,23 @@ p{
 .square h3, .square p {
 	text-align: center;
 }
+
+
+.square p {
+    margin: 40px 0;
+}
+.square button {
+    width: 200px;
+    line-height: 35px;
+    font-size: 1.2em;
+    font-weight: 300;
+    background-color: #9B7185;
+    color: white;
+    border: none;
+
+}
+
+
 
 #content h2 {
     text-align: center;
@@ -138,18 +158,32 @@ p{
 #nav-left {
   float: right;
   text-align: justify;
-  max-width: 100%;
-  overflow: hidden;
+  max-width: 48%;
+  width:100%;
   padding: 10px 0;
-  margin-left: 50px;
+  margin-left: 9px;
   margin-right: 135px;
   position: absolute;
   margin-top: 195px;
 
+
 }
 
+/* Sub Menus */
+  #nav-left li ul {
+    position: absolute;
+    display: none;
+    width: inherit;
+  }
 
+#nav-left li:hover ul {
+    display: block;
 
+  }
+#nav-left li:hover ul li {
+    display: block;
+    
+  }
 
 
 ul {
