--- a/style.css
+++ b/style.css
@@ -8,15 +8,16 @@ body {
 }
 
 header {
+
+
     max-width: 940px;
     margin: 0 auto;
     padding: 0 20px;
     height: 275px;
     overflow: hidden;
 
+
 }
-
-
 
 header div {
 	clear: both;
@@ -116,12 +117,13 @@ img {
 .square {
 	float: left;
 	display:inline;
-<<<<<<< HEAD
+
 	
 	width: 31.2%;
   margin: 80px 0;
-  margin-right: 20px;
+  
 
+	margin-right: 20px;
 	
 
 	margin-top: 15px;
@@ -135,7 +137,6 @@ img {
     background-color: #B5B5B5;
     opacity: .9;
   }
-
 
 .square h3, .square p {
 	text-align: center;
@@ -163,20 +164,57 @@ img {
 
 
 #nav-left {
-  float: right;
-  text-align: justify;
-  max-width: 100%;
-  overflow: hidden;
+    text-align: justify;
+ width: 45%;
+
   padding: 10px 0;
   margin-left: 50px;
   margin-right: 135px;
-  position: absolute;
+ position: absolute;
   margin-top: 195px;
 
 }
 
+#nav-left a:hover {
+  font-weight: bold;
+}
+
+ /* Sub Menus */
+  #nav-left li ul {
+    position: absolute;
+    display: none;
+    width: inherit;
+  }
+
+  #nav-left li:hover ul {
+    display: block;
+  }
+
+  #nav-left li ul li {
+    display: block;
+  }
 
 
+#nav-left a:link {
+  color: black;
+  text-decoration: none
+}
+
+
+
+#nav-left a:visited {
+  color: black;
+  text-decoration: none
+}
+
+#menu-item-59 a:link{
+  text-decoration: underline;
+  text-decoration-color: red;
+}
+
+#menu-item-59 a:visited{
+  text-decoration: underline;
+}
 
 
 ul {
@@ -348,3 +386,45 @@ img.donatetoppic{
   font-size: 18px;
     border-top: dotted 1px #B2B2B2;
 }
+
+
+.show-search {
+  display: none;
+}
+
+.slideImage{
+position: relative;   
+margin: 20px auto;
+
+}
+.slideImage img {
+    width: 100%;
+    height: 550px;
+}
+
+.slideImage .inner_box{
+  position:absolute;
+/*  background:rgba(255,255,255,0.6);
+  padding: 4%;*/
+  top:46%;
+  left:20%;
+  transform:translate(-50%,-50%);
+}
+.slideImage .inner_box h1{   
+   font-size: 2.5em;
+   font-weight: 300;
+   color:#000000;
+}
+.slideImage .inner_box .button{
+   font-family: 'sinkin_sans100_thin', sans-serif, sans-serif, ariel;
+    background-color: #F47D48;
+    font-size: 1em;
+    font-weight: 800;
+    float: left;
+    padding: 10px 15px;
+    margin-top:120px;
+    display: inline-block;
+    cursor: pointer;
+}
+
+.mySlides {display:none}
