--- a/style.css
+++ b/style.css
@@ -295,7 +295,7 @@ img.donatetoppic{
 	/*width: 940px;*/
     width:100%;
 	margin: 0 auto;
-	padding: 0 20px;
+	/*padding: 0 20px;*/
 }
 
 #footer p {
@@ -347,6 +347,7 @@ h4.singupheader{
     padding-bottom: 1%;
     font-size: 1.2em;
     float: left;
+    padding-left: 2%;
     
 }
 
@@ -354,6 +355,7 @@ p.signup{
     margin-top:1em;
     margin-bottom: 1em;
     float: left;
+    padding-left: 2%;
 }
 
 #cover{
@@ -474,15 +476,15 @@ p.small {
 }
    
     
-    #mc_embed_signup{width:170%; padding-right:1%; }
+#mc_embed_signup{width:170%; padding-right:1%; }
    
     
-}
-
 .donatemiddle p {
 	margin-top: 50px;
 	text-align: justify;
 
+}
+    
 }
 
 @media screen  and (min-width: 300px)  and (max-width:1300px){
