--- a/style.css
+++ b/style.css
@@ -9,15 +9,11 @@ body {
 }
 
 header {
+	width: 940px;
+	margin: 0 auto;
+	padding: 0 20px;
 
-
-
-    max-width: 940px;
-    margin: 0 auto;
-    padding: 0 20px;
-    height: 300px;
-    overflow: hidden;
-
+	height: 300px;
 }
 
 header div {
@@ -58,12 +54,8 @@ p{
 
 #search-button {
 	float: right;
-	width: 40px;
+	width: 30px;
 	margin-top: 198px;
-}
-
-.show-search {
-  display: none;
 }
 
 #content {
@@ -86,33 +78,7 @@ p{
   clear: both;
 }
 
-#footer::after {
-  content: "";
-  display: block;
-  clear: both;
-}
 
-#footer {
-	width: 940px;
-	margin: 0 auto;
-	padding: 0 20px;
-
-
-}
-
-#footer p {
-	clear: both;
-}
-
-#left {
-	float: left;
-	width: 485px;
-}
-
-#right {
-	float: right;
-	width: 220px;
-}
 
 .square {
 	float: left;
@@ -152,14 +118,13 @@ p{
 #nav-left {
   float: right;
   text-align: justify;
-  width: 47%;
+  max-width: 100%;
   overflow: hidden;
   padding: 10px 0;
   margin-left: 50px;
   margin-right: 135px;
   position: absolute;
   margin-top: 195px;
-
 
 }
 
@@ -208,32 +173,8 @@ li {
     max-width: 200px;
 }
 
-.icon{
-    max-width: 60px;
-}
-
-.footertop{
-    clear:both;
-    text-align: center;
-    line-height: 800%;
-    display: block;
-
-    text-align: center;
-    line-height: 800%;
-
-}
-
-.footerbottom{
-    text-align: center;
 
 
-
-}
-
-div.footerdown{
-    background-color: #9B7185;
-    padding-top:30px;
-}
 
 .mainadopt{
 	width: 70%;
@@ -342,7 +283,6 @@ img.donatetoppic{
 
 
 
-<<<<<<< HEAD
 /*-----------------------add footer style-------------------*/
 
 #footer::after {
@@ -361,67 +301,61 @@ img.donatetoppic{
 #footer p {
 	clear: both;
 }
-=======
->>>>>>> 6db21026e844ae1013aaf3ac14b65c299fe8b303
 
 
-
-.slideImage{
-position: relative;   
-margin: 20px auto;
-
-}
-.slideImage img {
-    width: 100%;
-    height: 550px;
+#right p {
+  color: #ffffff;
 }
 
-.slideImage .inner_box{
-  position:absolute;
-/*  background:rgba(255,255,255,0.6);
-  padding: 4%;*/
-  top:46%;
-  left:20%;
-  transform:translate(-50%,-50%);
-}
-.slideImage .inner_box h1{   
-   font-size: 2.5em;
-   font-weight: 300;
-   color:#000000;
-}
-.slideImage .inner_box .button{
-   font-family: 'sinkin_sans100_thin', sans-serif, sans-serif, ariel;
-    background-color: #F47D48;
-    font-size: 1em;
-    font-weight: 800;
-    float: left;
-    padding: 10px 15px;
-    margin-top:120px;
-    display: inline-block;
-    cursor: pointer;
+#right {
+	float: right;
+	width: 220px;
+
 }
 
-.mySlides {display:none}
+.icon{
+    max-width: 15%;
+    padding:1%;
+}
 
-/*add footer style*/
+.footertop{
+    clear:both;
+    text-align: center;
+    line-height: 800%;
+    display: block;
+
+    text-align: center;
+    line-height: 800%;
+
+}
+
+.footerbottom {
+    text-align: center;
+    clear: both;
+    border-top: dotted 1px #ffffff;
+}
+
+div.footerdown{
+    background-color: #9B7185;
+    padding-top:30px;
+}
+
+
 h4.singupheader{
     font-family: 'Arvo',serif;
     color:#FFFFFF;
     padding-bottom: 1%;
     font-size: 1.2em;
-
     float: left;
     padding-left: 2%;
-
+    
 }
 
 p.signup{
     margin-top:1em;
     margin-bottom: 1em;
-
     float: left;
     padding-left: 2%;
-
 }
 
 #cover{
@@ -430,6 +364,7 @@ p.signup{
     width:75%;
     margin: 0 auto;
     padding-bottom: 2%;
+ 
 }
 
 p.follow {
@@ -441,6 +376,7 @@ p.follow {
 p.small {
     padding-top: 2%;
     font-size: .7em;
+    color:#ffffff;
 }
 
 #right {
@@ -450,10 +386,77 @@ p.small {
     padding-bottom: 4%;
     text-align: center;
 }
+ 
+ /*sign up form style---------------*/     
+#mc_embed_signup{background:#9B7185; color:#FFFFFF;clear:left; width:80%; padding-right:15%; }
+
+#mc-embedded-subscribe-form{ width:60%;float:left;padding-left: 120px; color:#FFFFFF;}
+ 
+#mc_embed_signup form { width:60%;text-align: left; padding:0px; color:#FFFFFF;}
+    
+#mc_embed_signup input.email {
+    /*font-family: "Open Sans","Helvetica Neue",Arial,Helvetica,Verdana,sans-serif;*/
+    font-size: .8em;
+    border: 1px solid #ffffff;
+    margin-top: 5%;
+    /*-webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;*/
+    color: #ffffff;
+    background-color: #9B7185;
+    /*box-sizing: border-box;*/
+    height: 2.9em;
+    padding: 0px 0.4em;
+    display: inline-block;
+    margin: 0;
+    width: 75%;
+    vertical-align: top;
+}
+      
+/*
+      #mc_embed_signup input.email.placeholder{
+          color: white;
+      }
+*/
+      
+   
+      
+    /*
+#mc_embed_signup label {
+    display: block;
+    font-size: 14px;
+    padding-top: 10px;
+    padding-bottom: 20px;
+}*/
+
+#mc_embed_signup .button {
+    font-size: 13px;
+    border: none;
+    /*
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;*/
+    letter-spacing: .03em;
+    color: #636363;
+    background-color: #E0E0E0;
+    box-sizing: border-box;
+    height: 2.7em;
+    /*line-height: 2.5em;*/
+    padding: 0 5px;
+    display: inline-block;
+    margin: 0;
+    transition: all 0.23s ease-in-out 0s;
+    width:100%;
+}
+
+
+
+
+
 
 /*phone version*/
 
-@media screen  and (max-width:768px) {
+@media screen  and (max-width:768px){
     body{background-color: aquamarine;}
      #right {
 	float: left;
@@ -472,21 +475,17 @@ p.small {
         
 }
    
-
     
 #mc_embed_signup{width:170%; padding-right:1%; }
    
+    
 .donatemiddle p {
-  margin-top: 50px;
-  text-align: justify;
-    
-}
-
-    
+	margin-top: 50px;
+	text-align: justify;
 
 }
-   
-
+    
+}
 
 @media screen  and (min-width: 300px)  and (max-width:1300px){
 	.sec{
@@ -521,4 +520,6 @@ p.small {
 		width: 90%;
 		text-align: justify;
 	}
+
+
 }
