--- a/style.css
+++ b/style.css
@@ -123,15 +123,40 @@ p{
 #nav-left {
   float: right;
   text-align: justify;
-  max-width: 100%;
+  width: 50%;
   overflow: hidden;
   padding: 10px 0;
-  margin-left: 50px;
+  margin-left: 12px;
   margin-right: 135px;
   position: absolute;
   margin-top: 195px;
 
 }
+
+#nav-left a:link {
+  color: black;
+  text-decoration: none;
+}
+#nav-left a:visited {
+  color: black;
+  text-decoration: none;
+
+}
+
+#nav-left a:hover {
+  font-weight: bold;
+}
+
+#menu-item-59 a:link {
+  text-decoration: underline;
+  text-decoration-color: #9B7185;
+}
+
+#menu-item-59 a:visited {
+  text-decoration: underline;
+  text-decoration-color: #9B7185;
+}
+
 
 
 
