--- a/style.css
+++ b/style.css
@@ -133,6 +133,10 @@ p{
 
 }
 
+#nav-left li{
+  display: inline-block;
+}
+
 #nav-left a:link {
   color: black;
   text-decoration: none;
@@ -157,7 +161,13 @@ p{
   text-decoration-color: #9B7185;
 }
 
+#toggle {
+display: none;
+}
 
+.show-search {
+  display: none;
+}
 
 
 
@@ -168,9 +178,7 @@ ul {
     display: inline-block;
 }
 
-li {
-    display: inline-block;
-}
+
 
 
 /*#logo {
@@ -559,15 +567,50 @@ p.small {
 
 /*phone version*/
 
+@media screen and (max-width: 1000px) {
+  #nav-left {
+    width: 70%;
+}
+}
+
 @media screen  and (max-width:768px){
     body{background-color: aquamarine;}
      #right {
-	float: left;
+	
+
+  float: left;
 	/*width: 220px;*/
     width:80%;
     padding-top: 2%;         
 
     }
+#toggle {
+display: block; /* make our toggle visible */
+float: right; /* float our toggle right */
+width: 17%;
+}
+
+#nav-left {
+display: none; /* hide our navigation */
+padding-left: 10px;
+padding-right: 10px;
+ margin-top: 15px;
+}
+
+#nav-left li {
+  display: block;
+
+}
+
+ 
+
+#nav-left ul li:last-child {
+border-bottom: 1px solid #FFF;
+}
+
+#nav-left ul li a {
+display: block; /* makes the anchor tag extend out */
+}
     p.follow {
     text-align: center;
  
